--- a/style.css
+++ b/style.css
@@ -1,21 +1,82 @@
 body{
   font-family:Helvetica,Arial,sans-serif;
 }
-.box{
+.box1{
   float:left;
   width:300px;
   height:300px;
   margin:1em;
   overflow:hidden;
-  transition: background-color .5s;
-  position:relative;
+
 }
-.box:hover{
-  background-color: pink;
+.box1:hover{
+  background-image:url(img/model1.jpg);
+  background-position: center;
+  background-size: contain;
 }
-.circle:hover{
-  background-color: orange;
+.box2{
+  float:left;
+  width:300px;
+  height:300px;
+  margin:1em;
+  overflow:hidden;
 }
+.box2:hover{
+  background-image:url(img/model5.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.box3{
+  float:left;
+  width:300px;
+  height:300px;
+  margin:1em;
+  overflow:hidden;
+}
+.box3:hover{
+  background-image:url(img/model2.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.box4{
+  float:left;
+  width:300px;
+  height:300px;
+  margin:1em;
+  overflow:hidden;
+}
+.box4:hover{
+  background-image:url(img/model9.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.box5{
+  float:left;
+  width:300px;
+  height:300px;
+  margin:1em;
+  overflow:hidden;
+  transition: background-image .5s;
+}
+.box5:hover{
+  background-image:url(img/model6.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.box6{
+  float:left;
+  width:300px;
+  height:300px;
+  margin:1em;
+  overflow:hidden;
+  transition: background-image .5s;
+}
+.box6:hover{
+  background-image:url(img/model7.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
 h1{
   font-size:1.5em;
   font-weight: bold;
@@ -23,6 +84,11 @@ h1{
   display: flex;
   align-items:center;
   justify-content: center;
+  transition: color .5s;
+}
+h1:hover{
+  color:grey;
+  opacity:0.4;
 }
 h2{
   font-size:1.5em;
@@ -32,6 +98,11 @@ h2{
   display: flex;
   align-items:center;
   justify-content: center;
+  transition: color .5s;
+}
+h2:hover{
+  color:black;
+  opacity: 0.5;
 }
 h3{
   font-size:1.5em;
@@ -41,8 +112,43 @@ h3{
   display: flex;
   align-items:center;
   justify-content: center;
+  transition: color .5s;
 }
-.circle{
+h3:hover{
+  color:grey;
+  opacity:.4;
+}
+.circle1{
+  	width: 300px;
+  	height: 300px;
+    margin:1em;
+    float: left;
+  	-moz-border-radius: 150px;
+  	-webkit-border-radius: 150px;
+  	border-radius: 150px;
+    overflow:hidden;
+}
+.circle1:hover{
+  background-image:url(img/model4.jpg);
+  background-position: center;
+  background-size:cover;
+}
+.circle2{
+  	width: 300px;
+  	height: 300px;
+    margin:1em;
+    float: left;
+  	-moz-border-radius: 150px;
+  	-webkit-border-radius: 150px;
+  	border-radius: 150px;
+    overflow:hidden;
+}
+.circle2:hover{
+  background-image:url(img/model8.jpg);
+  background-position: center;
+  background-size:cover;
+}
+.circle3{
   	width: 300px;
   	height: 300px;
     margin:1em;
@@ -52,5 +158,9 @@ h3{
   	border-radius: 150px;
     overflow:hidden;
     transition: background-color .5s;
-    position:relative;
+}
+.circle3:hover{
+  background-image:url(img/model11.jpg);
+  background-position: center;
+  background-size:cover;
 }
